started 2.2.0-SNAPSHOT, minimal Java lifted up to 11